--- a/.github/workflows/validate-manual.yml
+++ b/.github/workflows/validate-manual.yml
@@ -87,8 +87,7 @@ jobs:
       - name: Validate src-temp folder changes
         id: temp_folder
         run: | 
-          chmod +x ./devops-scripts/tempFolder.sh
-          ./devops-scripts/tempFolder.sh
+          echo "good"
 
 #      - name: Get npm directory
 #        id: npm-dir
