--- a/.github/workflows/deploy-manual.yml
+++ b/.github/workflows/deploy-manual.yml
@@ -92,134 +92,6 @@ jobs:
       - name: Get npm directory
         id: npm-dir
         run: |
-          echo "prefix_dir=$(npm config get prefix)" >> ${GITHUB_OUTPUT}
-          echo "dir=$(npm config get cache)" >> ${GITHUB_OUTPUT}
+          echo "${{ github.event.action }}"
 
-      - name: Cache npm
-        id: cache-npm
-        uses: actions/cache@v3
-        with:
-          path: ${{ steps.npm-dir.outputs.dir }}
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-
-      - name: Cache Salesforce CLI
-        id: cache-sf
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.local/share/sf
-            ${{ steps.npm-dir.outputs.prefix_dir }}/lib/node_modules/@salesforce
-            ${{ steps.npm-dir.outputs.prefix_dir }}/bin/sf
-          key: sf-deploy-${{ runner.os }}-${{ hashFiles('.github/workflows/deploy-manual.yml') }}
-
-      - name: Install Salesforce CLI & Plugins
-        if: steps.cache-sf.outputs.cache-hit != 'true'
-        run: |
-          npm install @salesforce/cli@${SF_CLI_VERSION} --global
-          echo y | sf plugins install sfdx-git-delta
-
-      - name: Install JS dependencies
-        if: steps.cache-npm.outputs.cache-hit != 'true'
-        run: npm ci
       
-      - name: Generate SFDX Delta Package
-        if: ${{ inputs.base_ref != '' }}
-        run: |
-          sf sgd source delta --from ${{ inputs.base_ref }} --output ./src/destructiveChanges/main --source ./src --ignore-destructive .destructiveignore
-          sed -i -e '/src\/omni-studio/d' .destructiveignore # Exclude omni-studio from ignore
-          sf sgd source delta --from ${{ inputs.base_ref }} --output ./src/destructiveChanges/omni --source ./src/omni-studio --ignore-destructive .destructiveignore
-          git checkout -- .destructiveignore
-
-      - name: Authenticate
-        id: auth
-        env:
-          SFDXAUTHURL: ${{secrets.SFDX_AUTH_URL}}
-        run: |
-          chmod +x ./devops-scripts/authenticate.sh
-          ./devops-scripts/authenticate.sh --set-default
-          
-      - name: Set Apex Tests Level
-        if: ${{ inputs.test_level || env.IS_RELEASE_BRANCH == 'true' }}
-        run: |
-          chmod +x ./devops-scripts/setApexUnitTestsToRun.sh
-          ./devops-scripts/setApexUnitTestsToRun.sh "${{ inputs.test_level || vars.RELEASE_UNIT_TEST_LEVEL }}" "${{ inputs.specified_tests }}" # Set TEST_LEVEL and SPECIFIED_TESTS to GITHUB_ENV
-
-      - name: Deploy Omni Studio Changes to ${{ inputs.environment }}
-        if: ${{ (inputs.modules_to_deploy == '' || contains(inputs.modules_to_deploy, 'omni-studio')) && env.IS_OMNI_STUDIO_ENABLED == 'true' }}
-        id: deploy_omni_changes
-        run: |
-          chmod +x ./devops-scripts/runOmniStudioDeployment.sh
-          ./devops-scripts/runOmniStudioDeployment.sh
-          grep -qxF "src/omni-studio/" .forceignore || printf "\n\nsrc/omni-studio/\n\n" >> .forceignore
-      
-      - name: Deploy Changes to ${{ github.event.inputs.environment }}
-        id: deploy_changes
-        env:
-          TEST_LEVEL: ${{ env.TEST_LEVEL }}
-          SPECIFIED_TESTS: ${{ env.SPECIFIED_TESTS }}
-        run: |
-          git config --global --add safe.directory /__w/mortgagesfdc-homes-crm/mortgagesfdc-homes-crm
-          chmod +x ./devops-scripts/includeChangedBREMetadata.sh 
-          ./devops-scripts/includeChangedBREMetadata.sh
-          chmod +x ./devops-scripts/runDeployments.sh 
-          ./devops-scripts/runDeployments.sh ${{ inputs.modules_to_deploy }}
-          
-      - name: Create CalculationMatrixRow(s)
-        if: ${{ steps.deploy_changes.outputs.decision_matrix_files != '' }}
-        run: |
-          chmod +x ./devops-scripts/calculationMatrixRows/createDecisionMatrixDefinitionRows.sh 
-          ./devops-scripts/calculationMatrixRows/createDecisionMatrixDefinitionRows.sh ${{ steps.deploy_changes.outputs.decision_matrix_files }}     
-
-      - name: Deactivate previous BRE versions
-        if: ${{ steps.deploy_changes.outputs.decision_matrix_files != '' || steps.deploy_changes.outputs.es_files != '' }}
-        run: |
-          chmod +x ./devops-scripts/deactivatePreviousBREVersions.sh
-          ./devops-scripts/deactivatePreviousBREVersions.sh "${{ steps.deploy_changes.outputs.decision_matrix_files }}" "${{ steps.deploy_changes.outputs.es_files }}"
-      
-      - name: Delete Inactive Flow Versions
-        if: ${{ env.ALLOW_INACTIVE_FLOW_DELETION == 'true' }}
-        run: |
-          chmod +x ./devops-scripts/deleteInactiveFlowVersions.sh
-          ./devops-scripts/deleteInactiveFlowVersions.sh
-      
-      - name: Publish HMBrokerApplication site
-        id: publish_site
-        run: |
-          community_publish_result=$(sf community publish --name 'HMBrokerApplication')
-          echo "$community_publish_result"
-
-      - name: Cancel Job
-        id: cancel
-        if: ${{ cancelled() }}
-        run: |
-          chmod +x ./devops-scripts/cancelJob.sh
-          if [ -n "${{ steps.deploy_changes.outputs.deployment_id }}" ]; then
-            ./devops-scripts/cancelJob.sh  ${{ steps.deploy_changes.outputs.deployment_id }}
-          elif [ -n "${{ steps.deploy_omni_changes.outputs.omni_deployment_id }}" ]; then
-            ./devops-scripts/cancelJob.sh ${{ steps.deploy_omni_changes.outputs.omni_deployment_id }}
-          fi
-
-      - name: Check failure
-        id: check
-        if: failure() && (steps.auth.outcome == 'failure' || steps.cancel.outcome == 'failure')
-        run: echo "should_notify=true" >> $GITHUB_OUTPUT    
-  
-  notify-teams:
-    runs-on: ubuntu-latest
-    needs: deploy-changes
-    if: always()
-      
-    steps:
-      - uses: actions/checkout@v4
-         
-      - name: Send Teams notification
-        if: ${{ needs.deploy-changes.outputs.should_notify == 'true' }}
-        run: |
-          chmod +x ./devops-scripts/runTeamsNotification.sh
-          ./devops-scripts/runTeamsNotification.sh
-        env:
-          TEAMS_WEBHOOK_URL: ${{ secrets.TEAMS_WEBHOOK_URL }}
-          GITHUB_REF: ${{ github.ref }}
-          GITHUB_URL: ${{ github.server_url }}
-          GITHUB_REPO: ${{ github.repository }}
-          GITHUB_RUN: ${{ github.run_id }}
