--- a/.github/workflows/deploy-manual.yml
+++ b/.github/workflows/deploy-manual.yml
@@ -74,7 +74,8 @@ jobs:
       IS_OMNI_STUDIO_ENABLED: ${{ vars.IS_OMNI_STUDIO_ENABLED }}
       IS_RELEASE_BRANCH: ${{ inputs.is_release_branch }}
     outputs:
-      should_notify: ${{ steps.check.outputs.should_notify }}  
+      should_notify: ${{ steps.check.outputs.should_notify }}
+      failed_job_name: ${{ steps.check.outputs.failed_job }}
     steps:
       - uses: actions/checkout@v4
         with:
@@ -83,3 +84,63 @@ jobs:
       - name: Get npm directory
         id: npm-dir
         run: echo "${{ github.event.action }}"
+
+      - name: Print
+        run: |
+          echo "${{ github.event_name }}"
+          echo "${{ github.event.action }}"
+      
+      # - name: Validate src-temp folder changes
+      #   id: temp_folder
+      #   run: |
+      #     chmod +x ./devops-scripts/tempFolder.sh
+      #     ./devops-scripts/tempFolder.sh
+          
+      - name: Authenticate
+        id: auth
+        env:
+          SFDXAUTHURL: ${{secrets.SFDX_AUTH_URL}}
+        run:  |
+          echo "${{ github.event_name }}"
+          if [[ "${{ github.event_name }}" != "pull_request" ]]; then
+            echo "Auth step running for merge queue"
+            exit 1
+          else
+            echo "Skipping Auth step as it's not a merge_queue event"
+          fi
+          
+      - name: Cancel Job
+        id: cancel
+        if: ${{ cancelled() }}
+        run: |
+          echo "cancel"
+     
+      - name: Check failure
+        id: check
+        if: failure() && (steps.auth.outcome == 'failure' || steps.cancel.outcome == 'failure')
+        run: |
+          echo "${{ github.job }}"
+          echo "${{ job.status }}"
+          echo "failed_job=${{ github.job }}" >> $GITHUB_OUTPUT
+          echo "should_notify=true" >> $GITHUB_OUTPUT
+
+  notify:
+    runs-on: ubuntu-latest
+    needs: deploy-changes
+    if: always()
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Send Teams notification
+        run: |
+          chmod +x ./devops-scripts/runTeamsNotification.sh
+          ./devops-scripts/runTeamsNotification.sh
+        env:
+          TEAMS_WEBHOOK_URL: ${{ secrets.TEAMS_WEBHOOK_URL }}
+          GITHUB_REF: ${{ github.ref }}
+          GITHUB_URL: ${{ github.server_url }}
+          GITHUB_REPO: ${{ github.repository }}
+          GITHUB_RUN: ${{ github.run_id }}
+          GITHUB_USER: ${{ github.event.pull_request.user.login }}
+          PR_LINK: ${{ github.event.pull_request.html_url }}
+          FAILED_JOB_NAME: ${{ needs.validate-changes.outputs.failed_job_name }}
