--- a/.github/workflows/deploy-manual.yml
+++ b/.github/workflows/deploy-manual.yml
@@ -104,7 +104,7 @@ jobs:
           echo "${{ github.event_name }}"
           if [[ "${{ github.event_name }}" != "pull_request" ]]; then
             echo "Auth step running for merge queue"
-            PR_URL=$(curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \ "https://api.github.com/repos/${{ github.repository }}/commits/${{ github.sha }}/pulls" | jq -r '.[0].html_url')
+            PR_URL=$(gh pr list --head "${{ github.ref_name }}" --state merged --json url -q '.[0].url')
             echo "PR_URL=${PR_URL}" >> $GITHUB_ENV
             echo "$PR_URL"
             exit 1
