--- a/.github/workflows/deploy-manual.yml
+++ b/.github/workflows/deploy-manual.yml
@@ -100,6 +100,7 @@ jobs:
         id: auth
         env:
           SFDXAUTHURL: ${{secrets.SFDX_AUTH_URL}}
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run:  |
           echo "${{ github.event_name }}"
           if [[ "${{ github.event_name }}" != "pull_request" ]]; then
