--- a/.github/workflows/deploy-manual.yml
+++ b/.github/workflows/deploy-manual.yml
@@ -103,11 +103,17 @@ jobs:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run:  |
           echo "${{ github.event_name }}"
-          if [[ "${{ github.event_name }}" != "pull_request" ]]; then
+          if [[ "${{ github.event_name }}" == "merge_group" ]]; then
             echo "Auth step running for merge queue"
-            PR_URL=$(gh pr list --head "${{ github.ref_name }}" --state merged --json url -q '.[0].url')
-            echo "PR_URL=${PR_URL}" >> $GITHUB_ENV
-            echo "$PR_URL"
+                # Fetch the PR using the commit SHA
+            PR_INFO=$(curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+              -H "Accept: application/vnd.github.v3+json" \
+              "https://api.github.com/repos/${{ github.repository }}/commits/${{ github.sha }}/pulls")
+
+            # Extract PR URL and author login using jq
+            PR_URL=$(echo "$PR_INFO" | jq -r '.[0].html_url')
+            PR_AUTHOR=$(echo "$PR_INFO" | jq -r '.[0].user.login')
+            echo "$PR_URL $PR_AUTHOR"
             exit 1
           else
             echo "Skipping Auth step as it's not a merge_queue event"
@@ -123,8 +129,6 @@ jobs:
         id: check
         if: failure() && (steps.auth.outcome == 'failure' || steps.cancel.outcome == 'failure')
         run: |
-          echo "${{ github.job }}"
-          echo "${{ job.status }}"
           echo "failed_job=${{ github.job }}" >> $GITHUB_OUTPUT
           echo "should_notify=true" >> $GITHUB_OUTPUT
 
@@ -147,4 +151,4 @@ jobs:
           GITHUB_RUN: ${{ github.run_id }}
           GITHUB_USER: ${{ github.event.pull_request.user.login }}
           PR_LINK: ${{ github.event.pull_request.html_url }}
-          FAILED_JOB_NAME: ${{ needs.validate-changes.outputs.failed_job_name }}
+          FAILED_JOB_NAME: ${{ needs.deploy-changes.outputs.failed_job_name }}
