--- a/.github/workflows/deploy-manual.yml
+++ b/.github/workflows/deploy-manual.yml
@@ -113,7 +113,7 @@ jobs:
             # Extract PR URL and author login using jq
             PR_URL=$(echo "$PR_INFO" | jq -r '.[0].html_url')
             PR_AUTHOR=$(echo "$PR_INFO" | jq -r '.[0].user.login')
-            echo "$PR_URL $PR_AUTHOR"
+            echo "$PR_INFO"
             exit 1
           else
             echo "Skipping Auth step as it's not a merge_queue event"
