--- a/.github/workflows/develop-merge-queue-validation.yml
+++ b/.github/workflows/develop-merge-queue-validation.yml
@@ -26,6 +26,7 @@ jobs:
 
       - name: Print
         run: |
+          echo "Full Name: ${{ github.event.pull_request.user.name }}"
           echo "actor: ${{ github.actor }}"
           echo "${{ github.event_name }}"
           echo "${{ github.event.action }}"
