--- a/.github/workflows/deploy-manual.yml
+++ b/.github/workflows/deploy-manual.yml
@@ -75,7 +75,7 @@ jobs:
       IS_RELEASE_BRANCH: ${{ inputs.is_release_branch }}
     outputs:
       should_notify: ${{ steps.check.outputs.should_notify }}
-      failed_job_name: ${{ steps.check.outputs.failed_job }}
+      failed_job: ${{ steps.check.outputs.failed_job }}
     steps:
       - uses: actions/checkout@v4
         with:
@@ -83,72 +83,139 @@ jobs:
 
       - name: Get npm directory
         id: npm-dir
-        run: echo "${{ github.event.action }}"
-
-      - name: Print
         run: |
-          echo "${{ github.event_name }}"
-          echo "${{ github.event.action }}"
-      
-      # - name: Validate src-temp folder changes
-      #   id: temp_folder
-      #   run: |
-      #     chmod +x ./devops-scripts/tempFolder.sh
-      #     ./devops-scripts/tempFolder.sh
-          
+          echo "prefix_dir=$(npm config get prefix)" >> ${GITHUB_OUTPUT}
+          echo "dir=$(npm config get cache)" >> ${GITHUB_OUTPUT}
+
+#      - name: Cache npm
+#        id: cache-npm
+#        uses: actions/cache@v3
+#        with:
+#          path: ${{ steps.npm-dir.outputs.dir }}
+#          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+#
+#      - name: Cache Salesforce CLI
+#        id: cache-sf
+#        uses: actions/cache@v3
+#        with:
+#          path: |
+#            ~/.local/share/sf
+#            ${{ steps.npm-dir.outputs.prefix_dir }}/lib/node_modules/@salesforce
+#            ${{ steps.npm-dir.outputs.prefix_dir }}/bin/sf
+#          key: sf-deploy-${{ runner.os }}-${{ hashFiles('.github/workflows/deploy-manual.yml') }}
+#
+#      - name: Install Salesforce CLI & Plugins
+#        if: steps.cache-sf.outputs.cache-hit != 'true'
+#        run: |
+#          npm install @salesforce/cli@${SF_CLI_VERSION} --global
+#          echo y | sf plugins install sfdx-git-delta
+#
+#      - name: Install JS dependencies
+#        if: steps.cache-npm.outputs.cache-hit != 'true'
+#        run: npm ci
+#
+#      - name: Generate Delta Package for General Sources
+#        run: |
+#          sf sgd source delta --from origin/${{ inputs.base_ref }} --output ./package/src --source ./src --ignore-destructive .destructiveignore
+#
+#      - name: Generate Delta Package Omni-Studio
+#        run: |
+#          sf sgd source delta --from origin/${{ inputs.base_ref }} --output ./package/omni --source ./src-omni
+
       - name: Authenticate
         id: auth
         env:
           SFDXAUTHURL: ${{secrets.SFDX_AUTH_URL}}
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run:  |
-          echo "${{ github.event_name }}"
-          if [[ "${{ github.event_name }}" == "merge_group" ]]; then
-            echo "Auth step running for merge queue"
-                # Fetch the PR using the commit SHA
-            PR_INFO=$(curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
-              -H "Accept: application/vnd.github.v3+json" \
-              "https://api.github.com/repos/${{ github.repository }}/commits/${{ github.sha }}/pulls")
-
-            # Extract PR URL and author login using jq
-            PR_URL=$(echo "$PR_INFO" | jq -r '.[0].html_url')
-            PR_AUTHOR=$(echo "$PR_INFO" | jq -r '.[0].user.login')
-            echo "$PR_INFO"
-            exit 1
-          else
-            echo "Skipping Auth step as it's not a merge_queue event"
-          fi
+        run: |
+          exit 1
+          chmod +x ./devops-scripts/authenticate.sh
+          ./devops-scripts/authenticate.sh --set-default
           
+      - name: Set Apex Tests Level
+        if: ${{ inputs.test_level || env.IS_RELEASE_BRANCH == 'true' }}
+        run: |
+          chmod +x ./devops-scripts/setApexUnitTestsToRun.sh
+          ./devops-scripts/setApexUnitTestsToRun.sh "${{ inputs.test_level || vars.RELEASE_UNIT_TEST_LEVEL }}" "${{ inputs.specified_tests }}" # Set TEST_LEVEL and SPECIFIED_TESTS to GITHUB_ENV
+
+      - name: Deploy Omni Studio Changes to ${{ inputs.environment }}
+        if: ${{ contains(inputs.modules_to_deploy, 'src-omni/omni-studio/') && env.IS_OMNI_STUDIO_ENABLED == 'true' }}
+        id: deploy_omni_changes
+        run: |
+          chmod +x ./devops-scripts/runOmniStudioDeployment.sh
+          ./devops-scripts/runOmniStudioDeployment.sh
+
+      - name: Deploy Changes to ${{ github.event.inputs.environment }}
+        id: deploy_changes
+        env:
+          TEST_LEVEL: ${{ env.TEST_LEVEL }}
+          SPECIFIED_TESTS: ${{ env.SPECIFIED_TESTS }}
+        run: |
+          git config --global --add safe.directory /__w/mortgagesfdc-homes-crm/mortgagesfdc-homes-crm
+          chmod +x ./devops-scripts/includeChangedBREMetadata.sh 
+          ./devops-scripts/includeChangedBREMetadata.sh
+          chmod +x ./devops-scripts/runDeployments.sh 
+          ./devops-scripts/runDeployments.sh ${{ inputs.modules_to_deploy }}
+          
+      - name: Create CalculationMatrixRow(s)
+        if: ${{ steps.deploy_changes.outputs.decision_matrix_files != '' }}
+        run: |
+          chmod +x ./devops-scripts/calculationMatrixRows/createDecisionMatrixDefinitionRows.sh 
+          ./devops-scripts/calculationMatrixRows/createDecisionMatrixDefinitionRows.sh ${{ steps.deploy_changes.outputs.decision_matrix_files }}     
+
+      - name: Deactivate previous BRE versions
+        if: ${{ steps.deploy_changes.outputs.decision_matrix_files != '' || steps.deploy_changes.outputs.es_files != '' }}
+        run: |
+          chmod +x ./devops-scripts/deactivatePreviousBREVersions.sh
+          ./devops-scripts/deactivatePreviousBREVersions.sh "${{ steps.deploy_changes.outputs.decision_matrix_files }}" "${{ steps.deploy_changes.outputs.es_files }}"
+      
+      - name: Delete Inactive Flow Versions
+        if: ${{ env.ALLOW_INACTIVE_FLOW_DELETION == 'true' }}
+        run: |
+          chmod +x ./devops-scripts/deleteInactiveFlowVersions.sh
+          ./devops-scripts/deleteInactiveFlowVersions.sh
+      
+      - name: Publish HMBrokerApplication site
+        id: publish_site
+        run: |
+          community_publish_result=$(sf community publish --name 'HMBrokerApplication')
+          echo "$community_publish_result"
+
       - name: Cancel Job
         id: cancel
         if: ${{ cancelled() }}
         run: |
-          echo "cancel"
-     
+          chmod +x ./devops-scripts/cancelJob.sh
+          if [ -n "${{ steps.deploy_changes.outputs.deployment_id }}" ]; then
+            ./devops-scripts/cancelJob.sh  ${{ steps.deploy_changes.outputs.deployment_id }}
+          elif [ -n "${{ steps.deploy_omni_changes.outputs.omni_deployment_id }}" ]; then
+            ./devops-scripts/cancelJob.sh ${{ steps.deploy_omni_changes.outputs.omni_deployment_id }}
+          fi
+
       - name: Check failure
         id: check
         if: failure() && (steps.auth.outcome == 'failure' || steps.cancel.outcome == 'failure')
         run: |
-          echo "failed_job=${{ github.job }}" >> $GITHUB_OUTPUT
           echo "should_notify=true" >> $GITHUB_OUTPUT
-
-  notify:
+          echo "failed_job=${{ github.job }}" >> $GITHUB_OUTPUT   
+  
+  notify-teams:
     runs-on: ubuntu-latest
     needs: deploy-changes
     if: always()
+      
     steps:
       - uses: actions/checkout@v4
-
+         
       - name: Send Teams notification
+        if: ${{ needs.deploy-changes.outputs.should_notify == 'true' }}
         run: |
           chmod +x ./devops-scripts/runTeamsNotification.sh
           ./devops-scripts/runTeamsNotification.sh
         env:
           TEAMS_WEBHOOK_URL: ${{ secrets.TEAMS_WEBHOOK_URL }}
-          GITHUB_REF: ${{ github.ref }}
+          GITHUB_BRANCH: ${{ github.head_ref || github.ref_name }}
           GITHUB_URL: ${{ github.server_url }}
           GITHUB_REPO: ${{ github.repository }}
           GITHUB_RUN: ${{ github.run_id }}
-          GITHUB_USER: ${{ github.event.pull_request.user.login }}
+          JOB_NAME: ${{ needs.validate-changes.outputs.failed_job }}
           PR_LINK: ${{ github.event.pull_request.html_url }}
-          FAILED_JOB_NAME: ${{ needs.deploy-changes.outputs.failed_job_name }}
