--- a/.github/workflows/validate-manual.yml
+++ b/.github/workflows/validate-manual.yml
@@ -88,8 +88,9 @@ jobs:
       - name: Validate src-temp folder changes
         id: temp_folder
         run: | 
-          chmod +x ./devops-scripts/tempFolder.sh
-          ./devops-scripts/tempFolder.sh
+          echo "ok"
+          # chmod +x ./devops-scripts/tempFolder.sh
+          # ./devops-scripts/tempFolder.sh
 
 #      - name: Get npm directory
 #        id: npm-dir
