--- a/.github/workflows/deploy-manual.yml
+++ b/.github/workflows/deploy-manual.yml
@@ -216,6 +216,11 @@ jobs:
           echo "FULL_NAME=$FULL_NAME" >> $GITHUB_ENV
           SQUAD_NAME=$(echo "$SQUAD" | grep -iE " = .*\\b$USERNAME\\b" | awk -F' =' '{print $1}')
           echo "SQUAD_NAME=${SQUAD_NAME}" >> $GITHUB_ENV
+          PR_URL=$(curl -s -H "Authorization: token $GH_TOKEN" \
+            -H "Accept: application/vnd.github.v3+json" \
+            "https://api.github.com/repos/${{ github.repository }}/commits/${{ github.event.merge_group.head_commit.id }}/pulls" \
+            | jq -r '.[0].html_url')
+          echo "$PR_URL"
 
       - name: Send Teams notification
         if: ${{ needs.deploy-changes.outputs.should_notify == 'true' }}
