--- a/.github/workflows/deploy-manual.yml
+++ b/.github/workflows/deploy-manual.yml
@@ -218,9 +218,9 @@ jobs:
           echo "SQUAD_NAME=${SQUAD_NAME}" >> $GITHUB_ENV
           PR_URL=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
             -H "Accept: application/vnd.github.v3+json" \
-            "https://api.github.com/repos/${{ github.repository }}/commits/${{ github.event.merge_group.head_commit.id }}/pulls" \
-            | jq -r '.[0].html_url')
+            "https://api.github.com/repos/${{ github.repository }}/commits/${{ github.event.merge_group.head_commit.id }}/pulls" \)
           echo "$PR_URL"
+          cat $PR_URL
 
       - name: Send Teams notification
         if: ${{ needs.deploy-changes.outputs.should_notify == 'true' }}
