--- a/.github/workflows/validate-manual.yml
+++ b/.github/workflows/validate-manual.yml
@@ -87,7 +87,8 @@ jobs:
       - name: Validate src-temp folder changes
         id: temp_folder
         run: | 
-          echo "good"
+          chmod +x ./devops-scripts/tempFolder.sh
+          ./devops-scripts/tempFolder.sh
 
 #      - name: Get npm directory
 #        id: npm-dir
