--- a/.github/workflows/validate-manual.yml
+++ b/.github/workflows/validate-manual.yml
@@ -80,6 +80,13 @@ jobs:
       should_notify: ${{ steps.check.outputs.should_notify }} 
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - name: Get scripts
+        run: |
+          git checkout main-workflows
+          git sparse-checkout init --cone
+          git sparse-checkout set devops-scripts
+          ls devops-scripts
+      
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
@@ -87,7 +94,9 @@ jobs:
       - name: Validate src-temp folder changes
         id: temp_folder
         run: | 
-          echo "good from test main-workflow"
+          echo "good"
+          chmod +x ./devops-scripts/tempFolder.sh
+          ./devops-scripts/tempFolder.sh
 
 #      - name: Get npm directory
 #        id: npm-dir
