--- a/.github/workflows/validate-manual.yml
+++ b/.github/workflows/validate-manual.yml
@@ -80,12 +80,6 @@ jobs:
       should_notify: ${{ steps.check.outputs.should_notify }} 
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - name: Get scripts
-        run: |
-          git checkout main-workflows
-          git sparse-checkout init --cone
-          git sparse-checkout set devops-scripts
-          ls devops-scripts
       
       - uses: actions/checkout@v4
         with:
@@ -94,8 +88,7 @@ jobs:
       - name: Validate src-temp folder changes
         id: temp_folder
         run: | 
-          chmod +x ./devops-scripts/tempFolder.sh
-          ./devops-scripts/tempFolder.sh
+          echo "hello"
 
 #      - name: Get npm directory
 #        id: npm-dir
