--- a/.github/workflows/validate-manual.yml
+++ b/.github/workflows/validate-manual.yml
@@ -80,6 +80,10 @@ jobs:
       should_notify: ${{ steps.check.outputs.should_notify }} 
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          
       - name: Get scripts
         run: |
           git status
@@ -96,6 +100,7 @@ jobs:
       - name: Validate src-temp folder changes
         id: temp_folder
         run: | 
+          git status
           echo "good"
           chmod +x ./devops-scripts/tempFolder.sh
           ./devops-scripts/tempFolder.sh
