--- a/.github/workflows/validate-manual.yml
+++ b/.github/workflows/validate-manual.yml
@@ -90,11 +90,16 @@ jobs:
           git checkout main-workflows
           git sparse-checkout init --cone
           git sparse-checkout set devops-scripts
+
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
     
       # Now that you have the devops-scripts directory, you can access tempFolder.sh
       - name: Validate src-temp folder changes
         id: temp_folder
         run: | 
+          cat src-temp/README.md
           chmod +x ./devops-scripts/tempFolder.sh
           ./devops-scripts/tempFolder.sh
 
