--- a/.github/workflows/validate-manual.yml
+++ b/.github/workflows/validate-manual.yml
@@ -91,12 +91,10 @@ jobs:
           
       - name: Get scripts from main-workflows branch
         run: |
-          git fetch origin main-workflows
-          git checkout main-workflows
           git sparse-checkout init --cone
-          git sparse-checkout set devops-scripts
-          git checkout $BRANCH_NAME
-          git sparse-checkout disable
+          git fetch origin main-workflows
+          git sparse-checkout set devops-scripts/
+          git checkout main-workflows -- devops-scripts/
 
       # Now that you have the devops-scripts directory, you can access tempFolder.sh
       - name: Validate src-temp folder changes
