--- a/.github/workflows/validate-manual.yml
+++ b/.github/workflows/validate-manual.yml
@@ -86,10 +86,10 @@ jobs:
           
       - name: Get scripts from main-workflows branch
         run: |
-          git fetch origin main-workflows
+          git fetch --all  # Ensure all remote branches are available
           git sparse-checkout init --cone
-          git sparse-checkout set devops-scripts/
-          git checkout main-workflows -- devops-scripts/
+          git sparse-checkout set devops-scripts
+          git checkout origin/main-workflows -- devops-scripts
 
       # Now that you have the devops-scripts directory, you can access tempFolder.sh
       - name: Validate src-temp folder changes
