--- a/.github/workflows/validate-manual.yml
+++ b/.github/workflows/validate-manual.yml
@@ -87,9 +87,8 @@ jobs:
       - name: Get scripts from main-workflows branch
         run: |
           git fetch --all  # Ensure all remote branches are available
-          git sparse-checkout init --cone
-          git sparse-checkout set devops-scripts
           git checkout origin/main-workflows -- devops-scripts
+          git add devops-scripts/
 
       # Now that you have the devops-scripts directory, you can access tempFolder.sh
       - name: Validate src-temp folder changes
