--- a/.github/workflows/merge-queue.yml
+++ b/.github/workflows/merge-queue.yml
@@ -22,7 +22,7 @@ concurrency:
 jobs:
   merge_queue:
     name: 'Merge Queue'
-    uses: ./.github/workflows/develop-merge-queue-validation.yml
+    uses: Devops-Enterprise/Test/.github/workflows/develop-merge-queue-validation.yml@main
     with:
       environment: 'MaxQA'
       should_deploy_or_validate: ${{ github.event_name == 'pull_request' && 'validate' || 'deploy' }}
