--- a/.github/workflows/validate-manual.yml
+++ b/.github/workflows/validate-manual.yml
@@ -92,6 +92,7 @@ jobs:
       - name: Validate src-temp folder changes
         id: temp_folder
         run: | 
+          echo "hello"
           cat test.txt
           chmod +x ./devops-scripts/tempFolder.sh
           ./devops-scripts/tempFolder.sh
